# verdant

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
crates/verdant-core/: Cargo.toml
crates/verdant-core/src/: config.rs  error.rs  lib.rs  sovereignty.rs  traits.rs  types.rs
crates/verdant-core/tests/: sovereignty_compile.rs
crates/verdant-core/tests/compile_fail/: local_not_serializable.rs  local_not_serializable.stderr
crates/verdant-firmware/: Cargo.toml
crates/verdant-firmware/src/: cycle.rs  lib.rs  ota.rs  power.rs  storage.rs
crates/verdant-firmware/tests/: cycle_tests.rs
crates/verdant-gateway/: Cargo.toml
crates/verdant-gateway/src/: api.rs  bridge.rs  db.rs  governance.rs  lib.rs  sync.rs
crates/verdant-mesh/: Cargo.toml
crates/verdant-mesh/src/: compression.rs  discovery.rs  lib.rs  partition.rs  routing.rs  transport.rs
crates/verdant-mesh/tests/: properties.rs
crates/verdant-qudag/: Cargo.toml
crates/verdant-qudag-wasm/: Cargo.toml
crates/verdant-qudag-wasm/src/: lib.rs
crates/verdant-qudag/fuzz/: Cargo.toml
crates/verdant-qudag/fuzz/fuzz_targets/: fuzz_dag_insert.rs  fuzz_message_deser.rs
crates/verdant-qudag/src/: anonymity.rs  bloom.rs  crypto.rs  dag.rs  lib.rs  message.rs
crates/verdant-qudag/tests/: properties.rs
crates/verdant-robotics/: Cargo.toml
crates/verdant-robotics/src/: lib.rs  mission.rs  navigation.rs  relay.rs  safety.rs  swarm.rs
crates/verdant-safla/: Cargo.toml
crates/verdant-safla/src/: consensus.rs  events.rs  health.rs  lib.rs  propagation.rs  topology.rs
crates/verdant-sense/: Cargo.toml
crates/verdant-sense/src/: csi.rs  environmental.rs  fusion.rs  hal.rs  lib.rs
crates/verdant-sim/: Cargo.toml
crates/verdant-sim/benches/: sim_benchmarks.rs
crates/verdant-sim/src/: lib.rs  node.rs  scenario.rs  sim.rs  terrain.rs  weather.rs
crates/verdant-sim/tests/: full_pipeline.rs  integration.rs
crates/verdant-vector/: Cargo.toml
crates/verdant-vector/src/: anomaly.rs  delta.rs  embedding.rs  graph.rs  lib.rs  seasonal.rs
crates/verdant-vector/tests/: properties.rs
plans/: implementation-prompts.md  research  sparc.md
plans/adrs/: ADR-001-rust-no-std-esp32-firmware.md  ADR-002-qudag-post-quantum-protocol.md  ADR-003-vector-graph-environmental-learning.md  ADR-004-decentralized-governance-daa.md  ADR-005-redb-gateway-storage.md  ADR-006-offline-first-pwa-dashboard.md  ADR-007-london-school-tdd-strategy.md  ADR-008-mesh-topology-routing.md  ADR-009-safla-self-healing.md  ADR-010-agentic-robotics-integration.md  ADR-011-data-sovereignty-privacy.md  README.md
plans/ddd/: README.md  bounded-contexts.md  domain-events.md  domain-model.md  testing-strategy.md
tools/: build-dashboard.sh  deploy-gateway.sh  flash.sh  generate-terrain.py  sim-scenario.sh
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
ui/e2e/: dashboard.spec.ts
ui/public/: manifest.json
ui/src/: App.tsx
ui/src/components/: AlertManager.tsx  EventTimeline.tsx  FarmDashboard.tsx  FloodTracker.tsx  GovernancePortal.tsx  MeshMap.tsx  NodeStatusDetail.tsx  RobotOverview.tsx
ui/src/components/__tests__/: AlertManager.test.tsx  EventTimeline.test.tsx  FarmDashboard.test.tsx  FloodTracker.test.tsx  GovernancePortal.test.tsx  MeshMap.test.tsx  RobotOverview.test.tsx
ui/src/hooks/: useAlerts.ts  useGovernance.test.ts  useGovernance.ts  useMeshData.test.ts  useMeshData.ts  useOfflineSync.ts
ui/src/lib/: ports.ts  qudag-verify.ts  types.ts
ui/src/lib/adapters/: gateway-adapter.ts  indexeddb-adapter.ts
ui/src/workers/: sync-worker.ts
