[package]
name = "verdant-mesh"
version = "0.1.0"
edition = "2024"
description = "Mesh networking layer for Verdant: discovery, routing, transport, partition recovery"
license = "MIT OR Apache-2.0"

[features]
default = []
std = ["serde/std", "postcard/use-std", "heapless/serde"]

[dependencies]
verdant-core = { path = "../verdant-core" }
verdant-qudag = { path = "../verdant-qudag" }
serde = { version = "1", default-features = false, features = ["derive"] }
postcard = { version = "1.1", default-features = false, features = ["experimental-derive"] }
heapless = { version = "0.8", default-features = false, features = ["serde"] }
lz4_flex = { version = "0.13", default-features = false, features = ["safe-encode", "safe-decode"] }

[dev-dependencies]
postcard = { version = "1.1", features = ["use-std"] }
mockall = "0.13"
proptest = "1"
