[package]
name = "verdant-sim"
version = "0.1.0"
edition = "2024"
description = "Discrete-event network simulator for Verdant mesh integration testing"
license = "MIT OR Apache-2.0"

[dependencies]
verdant-core = { path = "../verdant-core", features = ["std"] }
verdant-vector = { path = "../verdant-vector", features = ["std"] }
verdant-qudag = { path = "../verdant-qudag" }
verdant-mesh = { path = "../verdant-mesh", features = ["std"] }
verdant-safla = { path = "../verdant-safla", features = ["std"] }
verdant-sense = { path = "../verdant-sense", features = ["std"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }
heapless = { version = "0.8", features = ["serde"] }

[dev-dependencies]
verdant-gateway = { path = "../verdant-gateway" }
verdant-qudag = { path = "../verdant-qudag", features = ["std"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1"

[[bench]]
name = "sim_benchmarks"
harness = false
